--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,28 @@
+aiowebsocket==1.0.0.dev2
 bidict==0.21.2
 blspy==1.0.2
 certifi==2020.12.5
+cffi==1.14.5
 chardet==4.0.0
 click==8.0.0
 clvm==0.9.6
 colorama==0.4.4
 Flask==2.0.0
+gevent==21.1.2
+greenlet==1.1.0
 idna==2.10
 itsdangerous==2.0.0
 Jinja2==3.0.0
 MarkupSafe==2.0.0
 pybind11==2.6.2
+pycparser==2.20
 python-engineio==4.2.0
 python-socketio==5.3.0
 redis==3.5.3
 requests==2.25.1
 urllib3==1.26.4
+waitress==2.0.0
 websockets==9.0.2
 Werkzeug==2.0.0
+zope.event==4.5.0
+zope.interface==5.4.0
