--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,6 @@
+aiohttp==3.7.4.post0
+async-timeout==3.0.1
+attrs==21.2.0
 bidict==0.21.2
 blspy==1.0.2
 certifi==2020.12.5
@@ -7,21 +10,28 @@ click==8.0.0
 clvm==0.9.6
 colorama==0.4.4
 Flask==2.0.0
+geoip2==4.2.0
 gevent==21.1.2
 greenlet==1.1.0
 idna==2.10
 itsdangerous==2.0.0
 Jinja2==3.0.0
 MarkupSafe==2.0.0
+maxminddb==2.0.3
+multidict==5.1.0
+osmviz==3.3.0
+Pillow==8.2.0
 pybind11==2.6.2
 pycparser==2.20
 python-engineio==4.2.0
 python-socketio==5.3.0
 redis==3.5.3
 requests==2.25.1
+typing-extensions==3.10.0.0
 urllib3==1.26.4
 waitress==2.0.0
 websockets==9.0.2
 Werkzeug==2.0.0
+yarl==1.6.3
 zope.event==4.5.0
 zope.interface==5.4.0
