--- a/requirements.txt
+++ b/requirements.txt
@@ -10,12 +10,14 @@ click==8.0.0
 clvm==0.9.6
 colorama==0.4.4
 Flask==2.0.0
+Flask-Limiter==1.4
 geoip2==4.2.0
 gevent==21.1.2
 greenlet==1.1.0
 idna==2.10
 itsdangerous==2.0.0
 Jinja2==3.0.0
+limits==1.5.1
 MarkupSafe==2.0.0
 maxminddb==2.0.3
 multidict==5.1.0
@@ -27,6 +29,7 @@ python-engineio==4.2.0
 python-socketio==5.3.0
 redis==3.5.3
 requests==2.25.1
+six==1.16.0
 typing-extensions==3.10.0.0
 urllib3==1.26.4
 waitress==2.0.0
